--- a/package.json
+++ b/package.json
@@ -11,17 +11,53 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "lint": "eslint . --ext .js,.tsx,.ts"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.15",
-    "@docusaurus/plugin-content-docs": "^2.0.0-beta.15",
-    "@docusaurus/preset-classic": "2.0.0-beta.15",
-    "@mdx-js/react": "^1.6.21",
+    "@docusaurus/core": "2.0.0-beta.16",
+    "@docusaurus/plugin-content-docs": "2.0.0-beta.16",
+    "@docusaurus/preset-classic": "2.0.0-beta.16",
+    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@axie/eslint-config": "^1.0.0",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.16",
+    "@tsconfig/docusaurus": "^1.0.4",
+    "typescript": "4.6.2"
+  },
+  "eslintConfig": {
+    "extends": "@axie",
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "printWidth": 100,
+          "tabWidth": 2,
+          "useTabs": false,
+          "semi": false,
+          "singleQuote": true,
+          "quoteProps": "as-needed",
+          "jsxSingleQuote": false,
+          "trailingComma": "es5",
+          "bracketSpacing": true,
+          "arrowParens": "always"
+        }
+      ],
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "debug",
+            "error"
+          ]
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
