--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.16",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.16",
     "@docusaurus/plugin-content-docs": "2.0.0-beta.16",
     "@docusaurus/preset-classic": "2.0.0-beta.16",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-sass": "^0.2.2",
+    "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@axie/eslint-config": "^1.0.0",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.16",
     "@tsconfig/docusaurus": "^1.0.4",
     "typescript": "4.6.2"
   },
