--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.16",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "docusaurus-lunr-search": "^2.1.15",
     "docusaurus-plugin-sass": "^0.2.2",
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.2.1",
