--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
-    "@axie/eslint-config": "^1.0.0",
+    "@axieinfinity/eslint-config": "^1.0.0",
     "@tsconfig/docusaurus": "^1.0.4",
     "typescript": "4.6.2"
   },
