--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
     "docusaurus-plugin-sass": "^0.2.2",
+    "hast-util-is-element": "1.1.0",
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-katex": "5",
+    "remark-math": "3",
     "sass": "^1.49.9"
   },
   "devDependencies": {
