--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "lint": "eslint . --ext .js,.tsx,.ts"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.16",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.16",
-    "@docusaurus/preset-classic": "2.0.0-beta.16",
+    "@docusaurus/core": "^2.3.1",
+    "@docusaurus/module-type-aliases": "^2.3.1",
+    "@docusaurus/preset-classic": "^2.3.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
