--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "5",
-    "remark-math": "3",
+    "remark-math": "^3.0.1",
     "sass": "^1.49.9"
   },
   "devDependencies": {
