feat: add Vale instructions, edit the README

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,8 @@
 # Relative path to the style directory
-StylesPath = styles
+StylesPath = utils/vale/styles
+
+# Name of the vocabulary directory
+Vocab = Ronin
 
 # Formats
 [*.md]
@@ -7,3 +10,6 @@ StylesPath = styles
 
 # Style used
 BasedOnStyles = Google
+
+Google.FirstPerson = NO
+Google.We = NO
