--- a/.github/ISSUE_TEMPLATE/improve-site.yaml
+++ b/.github/ISSUE_TEMPLATE/improve-site.yaml
@@ -1,5 +1,5 @@
-name: Improve existing content
-description: Make a suggestion to improve the content on an existing page.
+name: Improve the docs.roninchain.com site
+description: Make a suggestion or report a problem about the technical implementation of docs.roninchain.com.
 labels:
   - documentation
 body:
@@ -21,13 +21,13 @@ body:
   - type: textarea
     attributes:
       label: What page on docs.roninchain.com is affected?
-      description: Link to the page you'd like to see updated.
+      description: Link to pages where you're seeing a problem, add screenshots, and include your browser and device information.
     validations:
       required: true
 
   - type: textarea
     attributes:
-      label: What parts of the page would you like to see updated?
+      label: What changes are you suggesting?
       description: |
         - Give as much detail as you can to help us understand the change you want to see. 
         - Why should the docs be changed? What use cases does the change support? 
@@ -38,6 +38,6 @@ body:
   - type: textarea
     attributes:
       label: Additional information
-      description: Add any other context or screenshots about the change request here.
+      description: Add any other context information, configuration, and data that you think is necessary to reproduce the issue.
     validations:
       required: false
