--- a/.github/ISSUE_TEMPLATE/improve-site.yaml
+++ b/.github/ISSUE_TEMPLATE/improve-site.yaml
@@ -1,5 +1,5 @@
-name: Improve the docs.roninchain.com site
-description: Make a suggestion or report a problem about the technical implementation of docs.roninchain.com.
+name: Improve the Ronin docs site
+description: Make a suggestion or report a problem about the docs.roninchain.com site.
 labels:
   - documentation
 body:
