feat: add RNS x MM screenshots

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,11 +4,22 @@ StylesPath = utils/vale/styles
 # Name of the vocabulary directory
 Vocab = Ronin
 
-# Formats
-[*.md]
-[*.mdx]
+# Inline-level HTML tags to ignore
+IgnoredScopes = code, tt
 
-# Style used
+# Block-level HTML tags to ignore
+SkippedScopes = code
+
+# Specifies the minimum alert severity that Vale reports
+MinAlertLevel = suggestion
+
+# Specifies what Vale considers to be an individual word
+WordTemplate = \b(?:%s)\b
+
+[formats]
+mdx = md
+
+[*]
 BasedOnStyles = Google
 
 Google.FirstPerson = NO
