--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "prettier": "2.8.7",
     "typescript": "4.6.2"
   },
+  "engines": {
+    "node": ">=18.0"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
