chore: edit Vale config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: errata-ai/vale-action@reviewdog
+        with:
+          files: docs
+    env:
+      # Required
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
