--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,5 @@
 # Relative path to the style directory
-StylesPath = utils/vale/styles
+StylesPath = .github/styles
 
 # Name of the vocabulary directory
 Vocab = Ronin
@@ -19,7 +19,8 @@ WordTemplate = \b(?:%s)\b
 [formats]
 mdx = md
 
-[*]
+[*.{md,txt}]
+
 BasedOnStyles = Google
 
 Google.FirstPerson = NO
